# Thing

./: .gitignore  Cargo.toml  build.bat  run.bat
assets/dialogues/: terry_bad.json  terry_cheap.json  terry_expensive.json  terry_generic.json  terry_good.json
src/: business.rs  clicker.rs  dialogue.rs  economy.rs  game_state.rs  main.rs  marketing.rs  terry.rs  thing_type.rs
src/ui/: main_screen.rs  mod.rs  selection.rs  terry_box.rs
